--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "App.js",
   "scripts": {
     "test": "jest",
-    "start":"parcel index.html"
+    "start": "parcel index.html"
   },
   "author": "Rahul Singh",
   "license": "ISC",
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   }
 }
